bos/gen/BosParser.py
# Generated from E:/antlr_domain_specifc_lang_stuff/book/part2/bos/BosParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BosParser ( Parser ):

    grammarFileName = "BosParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'++'", "'--'", "'&'", "'|'", "'^'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'if'", "'else'", "'while'", 
                     "'for'", "'static-var'", "'var'", "'piece'", "'turn'", 
                     "'around'", "'move'", "'along'", "'to'", "'from'", 
                     "'now'", "'speed'", "'spin'", "'accelerate'", "<INVALID>", 
                     "'decelerate'", "<INVALID>", "<INVALID>", "'set'", 
                     "'get'", "'UNKNOWN_UNIT_VALUE'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'sleep'", "'hide'", "'show'", "'explode'", 
                     "'type'", "'signal'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'return'", "'cache'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'rand'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "L_PAREN", "R_PAREN", "L_BRACE", 
                      "R_BRACE", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", 
                      "SEMICOLON", "ASSIGN", "OP_ADD", "OP_MINUS", "OP_MULT", 
                      "OP_DIV", "OP_MOD", "OP_INCREMENT", "OP_DECREMENT", 
                      "BITWISE_AND", "BITWISE_OR", "BITWISE_XOR", "COMP_EQUAL", 
                      "COMP_NOT_EQUAL", "COMP_LESS", "COMP_LESS_EQUAL", 
                      "COMP_GREATER", "COMP_GREATER_EQUAL", "LOGICAL_AND", 
                      "LOGICAL_OR", "LOGICAL_NOT", "LOGICAL_XOR", "IF", 
                      "ELSE", "WHILE", "FOR", "STATIC_VAR", "VAR", "PIECE", 
                      "TURN", "AROUND", "MOVE", "ALONG", "TO", "FROM", "NOW", 
                      "SPEED", "SPIN", "ACCELERATE", "STOP_SPIN", "DECELERATE", 
                      "WAIT_FOR_TURN", "WAIT_FOR_MOVE", "SET", "GET", "UNKNOWN_UNIT_VALUE", 
                      "CALL_SCRIPT", "START_SCRIPT", "EMIT_SFX", "SLEEP", 
                      "HIDE", "SHOW", "EXPLODE", "TYPE", "SIGNAL", "SET_SIGNAL_MASK", 
                      "ATTACH_UNIT", "DROP_UNIT", "RETURN", "CACHE", "DONT_CACHE", 
                      "DONT_SHADOW", "DONT_SHADE", "PLAY_SOUND", "X_AXIS", 
                      "Y_AXIS", "Z_AXIS", "RAND", "LINEAR_CONSTANT", "DEGREES_CONSTANT", 
                      "FLOAT", "INT", "MULTI_LINE_MACRO", "DIRECTIVE", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WHITESPACE", "NEWLINE", "ID", "STRING" ]

    RULE_file = 0
    RULE_declaration = 1
    RULE_pieceDecl = 2
    RULE_pieceName = 3
    RULE_staticVarDecl = 4
    RULE_varName = 5
    RULE_funcDecl = 6
    RULE_funcName = 7
    RULE_argumentList = 8
    RULE_arguments = 9
    RULE_argName = 10
    RULE_statementBlock = 11
    RULE_statement = 12
    RULE_assignStatement = 13
    RULE_incStatement = 14
    RULE_decStatement = 15
    RULE_ifStatement = 16
    RULE_elseBlock = 17
    RULE_whileStatement = 18
    RULE_forStatement = 19
    RULE_keywordStatement = 20
    RULE_returnStatement = 21
    RULE_sleepStatement = 22
    RULE_varStatement = 23
    RULE_setStatement = 24
    RULE_getStatement = 25
    RULE_axis = 26
    RULE_turnStatement = 27
    RULE_moveStatement = 28
    RULE_speedOrNow = 29
    RULE_spinStatement = 30
    RULE_acceleration = 31
    RULE_stopSpinStatement = 32
    RULE_deceleration = 33
    RULE_waitForTurnStatement = 34
    RULE_waitForMoveStatement = 35
    RULE_emitSfxStatement = 36
    RULE_playSoundStatement = 37
    RULE_hideStatement = 38
    RULE_showStatement = 39
    RULE_explodeStatement = 40
    RULE_callStatement = 41
    RULE_startStatement = 42
    RULE_signalStatement = 43
    RULE_setSignalMaskStatement = 44
    RULE_attachUnitStatement = 45
    RULE_dropUnitStatement = 46
    RULE_cacheStatement = 47
    RULE_dontCacheStatement = 48
    RULE_dontShadowStatement = 49
    RULE_dontShadeStatement = 50
    RULE_expressionList = 51
    RULE_expressions = 52
    RULE_getTerm = 53
    RULE_commaExpression = 54
    RULE_expression = 55
    RULE_opterm = 56
    RULE_term = 57
    RULE_rand = 58
    RULE_unaryOp = 59
    RULE_op = 60
    RULE_constant = 61
    RULE_unknown_unit_value = 62
    RULE_stringConstant = 63

    ruleNames =  [ "file", "declaration", "pieceDecl", "pieceName", "staticVarDecl", 
                   "varName", "funcDecl", "funcName", "argumentList", "arguments", 
                   "argName", "statementBlock", "statement", "assignStatement", 
                   "incStatement", "decStatement", "ifStatement", "elseBlock", 
                   "whileStatement", "forStatement", "keywordStatement", 
                   "returnStatement", "sleepStatement", "varStatement", 
                   "setStatement", "getStatement", "axis", "turnStatement", 
                   "moveStatement", "speedOrNow", "spinStatement", "acceleration", 
                   "stopSpinStatement", "deceleration", "waitForTurnStatement", 
                   "waitForMoveStatement", "emitSfxStatement", "playSoundStatement", 
                   "hideStatement", "showStatement", "explodeStatement", 
                   "callStatement", "startStatement", "signalStatement", 
                   "setSignalMaskStatement", "attachUnitStatement", "dropUnitStatement", 
                   "cacheStatement", "dontCacheStatement", "dontShadowStatement", 
                   "dontShadeStatement", "expressionList", "expressions", 
                   "getTerm", "commaExpression", "expression", "opterm", 
                   "term", "rand", "unaryOp", "op", "constant", "unknown_unit_value", 
                   "stringConstant" ]

    EOF = Token.EOF
    COMMA=1
    L_PAREN=2
    R_PAREN=3
    L_BRACE=4
    R_BRACE=5
    L_SQUARE_BRACKET=6
    R_SQUARE_BRACKET=7
    SEMICOLON=8
    ASSIGN=9
    OP_ADD=10
    OP_MINUS=11
    OP_MULT=12
    OP_DIV=13
    OP_MOD=14
    OP_INCREMENT=15
    OP_DECREMENT=16
    BITWISE_AND=17
    BITWISE_OR=18
    BITWISE_XOR=19
    COMP_EQUAL=20
    COMP_NOT_EQUAL=21
    COMP_LESS=22
    COMP_LESS_EQUAL=23
    COMP_GREATER=24
    COMP_GREATER_EQUAL=25
    LOGICAL_AND=26
    LOGICAL_OR=27
    LOGICAL_NOT=28
    LOGICAL_XOR=29
    IF=30
    ELSE=31
    WHILE=32
    FOR=33
    STATIC_VAR=34
    VAR=35
    PIECE=36
    TURN=37
    AROUND=38
    MOVE=39
    ALONG=40
    TO=41
    FROM=42
    NOW=43
    SPEED=44
    SPIN=45
    ACCELERATE=46
    STOP_SPIN=47
    DECELERATE=48
    WAIT_FOR_TURN=49
    WAIT_FOR_MOVE=50
    SET=51
    GET=52
    UNKNOWN_UNIT_VALUE=53
    CALL_SCRIPT=54
    START_SCRIPT=55
    EMIT_SFX=56
    SLEEP=57
    HIDE=58
    SHOW=59
    EXPLODE=60
    TYPE=61
    SIGNAL=62
    SET_SIGNAL_MASK=63
    ATTACH_UNIT=64
    DROP_UNIT=65
    RETURN=66
    CACHE=67
    DONT_CACHE=68
    DONT_SHADOW=69
    DONT_SHADE=70
    PLAY_SOUND=71
    X_AXIS=72
    Y_AXIS=73
    Z_AXIS=74
    RAND=75
    LINEAR_CONSTANT=76
    DEGREES_CONSTANT=77
    FLOAT=78
    INT=79
    MULTI_LINE_MACRO=80
    DIRECTIVE=81
    LINE_COMMENT=82
    BLOCK_COMMENT=83
    WHITESPACE=84
    NEWLINE=85
    ID=86
    STRING=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BosParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(BosParser.DeclarationContext,i)


        def getRuleIndex(self):
            return BosParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = BosParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 34)) & ~0x3f) == 0 and ((1 << (_la - 34)) & 4503599627370501) != 0):
                self.state = 128
                self.declaration()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pieceDecl(self):
            return self.getTypedRuleContext(BosParser.PieceDeclContext,0)


        def staticVarDecl(self):
            return self.getTypedRuleContext(BosParser.StaticVarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(BosParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return BosParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = BosParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.pieceDecl()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.staticVarDecl()
                pass
            elif token in [86]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.funcDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PieceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIECE(self):
            return self.getToken(BosParser.PIECE, 0)

        def pieceName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BosParser.PieceNameContext)
            else:
                return self.getTypedRuleContext(BosParser.PieceNameContext,i)


        def SEMICOLON(self):
            return self.getToken(BosParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BosParser.COMMA)
            else:
                return self.getToken(BosParser.COMMA, i)

        def getRuleIndex(self):
            return BosParser.RULE_pieceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPieceDecl" ):
                listener.enterPieceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPieceDecl" ):
                listener.exitPieceDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPieceDecl" ):
                return visitor.visitPieceDecl(self)
            else:
                return visitor.visitChildren(self)




    def pieceDecl(self):

        localctx = BosParser.PieceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pieceDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BosParser.PIECE)
            self.state = 140
            self.pieceName()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 141
                self.match(BosParser.COMMA)
                self.state = 142
                self.pieceName()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(BosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PieceNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BosParser.ID, 0)

        def getRuleIndex(self):
            return BosParser.RULE_pieceName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPieceName" ):
                listener.enterPieceName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPieceName" ):
                listener.exitPieceName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPieceName" ):
                return visitor.visitPieceName(self)
            else:
                return visitor.visitChildren(self)




    def pieceName(self):

        localctx = BosParser.PieceNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pieceName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(BosParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StaticVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC_VAR(self):
            return self.getToken(BosParser.STATIC_VAR, 0)

        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BosParser.VarNameContext)
            else:
                return self.getTypedRuleContext(BosParser.VarNameContext,i)


        def SEMICOLON(self):
            return self.getToken(BosParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BosParser.COMMA)
            else:
                return self.getToken(BosParser.COMMA, i)

        def getRuleIndex(self):
            return BosParser.RULE_staticVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStaticVarDecl" ):
                listener.enterStaticVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStaticVarDecl" ):
                listener.exitStaticVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStaticVarDecl" ):
                return visitor.visitStaticVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def staticVarDecl(self):

        localctx = BosParser.StaticVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_staticVarDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(BosParser.STATIC_VAR)
            self.state = 153
            self.varName()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 154
                self.match(BosParser.COMMA)
                self.state = 155
                self.varName()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(BosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BosParser.ID, 0)

        def getRuleIndex(self):
            return BosParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarName" ):
                return visitor.visitVarName(self)
            else:
                return visitor.visitChildren(self)




    def varName(self):

        localctx = BosParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(BosParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcName(self):
            return self.getTypedRuleContext(BosParser.FuncNameContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(BosParser.StatementBlockContext,0)


        def L_PAREN(self):
            return self.getToken(BosParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(BosParser.R_PAREN, 0)

        def argumentList(self):
            return self.getTypedRuleContext(BosParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return BosParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = BosParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.funcName()
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 166
                self.match(BosParser.L_PAREN)
                self.state = 167
                self.match(BosParser.R_PAREN)
                pass

            elif la_ == 2:
                self.state = 168
                self.match(BosParser.L_PAREN)
                self.state = 169
                self.argumentList()
                self.state = 170
                self.match(BosParser.R_PAREN)
                pass


            self.state = 174
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BosParser.ID, 0)

        def getRuleIndex(self):
            return BosParser.RULE_funcName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncName" ):
                listener.enterFuncName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncName" ):
                listener.exitFuncName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncName" ):
                return visitor.visitFuncName(self)
            else:
                return visitor.visitChildren(self)




    def funcName(self):

        localctx = BosParser.FuncNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(BosParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arguments(self):
            return self.getTypedRuleContext(BosParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return BosParser.RULE_argumentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentList" ):
                listener.enterArgumentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentList" ):
                listener.exitArgumentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentList" ):
                return visitor.visitArgumentList(self)
            else:
                return visitor.visitChildren(self)




    def argumentList(self):

        localctx = BosParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==86:
                self.state = 178
                self.arguments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BosParser.ArgNameContext)
            else:
                return self.getTypedRuleContext(BosParser.ArgNameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BosParser.COMMA)
            else:
                return self.getToken(BosParser.COMMA, i)

        def getRuleIndex(self):
            return BosParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = BosParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.argName()
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 182
                self.match(BosParser.COMMA)
                self.state = 183
                self.argName()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BosParser.ID, 0)

        def getRuleIndex(self):
            return BosParser.RULE_argName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgName" ):
                listener.enterArgName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgName" ):
                listener.exitArgName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgName" ):
                return visitor.visitArgName(self)
            else:
                return visitor.visitChildren(self)




    def argName(self):

        localctx = BosParser.ArgNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(BosParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
